// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeeWarning > should not render if not open 1`] = `<DocumentFragment />`;

exports[`FeeWarning > should render a warning for a fee that is too HIGH 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba/40 backdrop-blur-xl dark:bg-black-rgba/40 dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1uui4dw"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-800 hover:text-white green:hover:bg-theme-primary-700 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Fee Warning
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <svg
              class="mx-auto my-8 max-w-52"
              viewBox="0 0 207 106"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M131.5 68.9l11.6-11.6c2.4-2.4 2.4-6.2 0-8.6l-35.3-35.3c-2.4-2.4-6.2-2.4-8.6 0L63.9 48.7c-2.4 2.4-2.4 6.2 0 8.6l35.3 35.3c2.4 2.4 6.2 2.4 8.6 0l12.4-12.4m6.7-6.8l-2.7 2.7"
                fill="none"
                stroke="#FC9F0F"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M89.5 16.7l7.6-7.6c3.5-3.5 9.3-3.5 12.8 0l37.4 37.4c3.5 3.5 3.5 9.3 0 12.8l-37.4 37.4c-3.5 3.5-9.3 3.5-12.8 0L59.7 59.4c-3.5-3.5-3.5-9.3 0-12.8L73.3 33m13.2-13.2l-9.8 9.8"
                fill="none"
                stroke="#FC9F0F"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M100.5 40.4c0-2 1.6-3.6 3.6-3.6s3.6 1.6 3.6 3.6v13.9c0 2-1.6 3.6-3.6 3.6s-3.6-1.6-3.6-3.6V40.4zm0 25.4c0-2 1.6-3.6 3.6-3.6s3.6 1.6 3.6 3.6-1.6 3.6-3.6 3.6-3.6-1.6-3.6-3.6z"
                fill="#F7FAFB"
                stroke="#212225"
                stroke-width="2"
              />
              <path
                d="M30.1 17h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7V8h-7V1h-2v7h-7v2h7v7z"
                fill="#DBDEE5"
              />
              <path
                d="M30.1 17h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm103.8 0h-2v-7h-7V8h7V1h2v7h7v2h-7v7zm-43 88h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm66 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22.5 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-66h-2v-7h-7V8h7V1h2v7h7v2h-7v7zm0 22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-21.5-22h-2v-7h-7V8h7V1h2v7h7v2h-7v7z"
                fill="#DBDEE5"
              />
            </svg>
            <div
              class="flex flex-col overflow-hidden rounded-xl"
            >
              <div
                class="css-rzhg83"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="circle-exclamation-mark"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Warning
                </span>
              </div>
              <div
                class="css-trjt6n"
              >
                You have selected a high fee. Your transaction can be confirmed with a lower fee. Do you wish to continue anyway?
              </div>
            </div>
            <div
              class="mt-4"
            >
              <fieldset
                class="flex min-w-0 flex-col css-ea0il3"
              >
                <label
                  class="flex w-max cursor-pointer items-center space-x-3"
                >
                  <input
                    class="css-kf7z38"
                    color="success"
                    data-testid="FeeWarning__suppressWarning-toggle"
                    name="suppressWarning"
                    type="checkbox"
                  />
                  <span
                    class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Don’t warn me about fees again
                  </span>
                </label>
              </fieldset>
            </div>
            <div
              class="css-j6ajdm"
            >
              <button
                class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
                data-testid="FeeWarning__cancel-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
                data-testid="FeeWarning__continue-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Continue
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FeeWarning > should render a warning for a fee that is too LOW 1`] = `
<DocumentFragment>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-hidden bg-theme-secondary-900-rgba/40 backdrop-blur-xl dark:bg-black-rgba/40 dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1uui4dw"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-xl px-6 pt-4 md:p-8"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-4 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-800 hover:text-white green:hover:bg-theme-primary-700 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white md:mr-8 md:mt-8"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-8 w-8"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Fee Warning
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <svg
              class="mx-auto my-8 max-w-52"
              viewBox="0 0 207 106"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M131.5 68.9l11.6-11.6c2.4-2.4 2.4-6.2 0-8.6l-35.3-35.3c-2.4-2.4-6.2-2.4-8.6 0L63.9 48.7c-2.4 2.4-2.4 6.2 0 8.6l35.3 35.3c2.4 2.4 6.2 2.4 8.6 0l12.4-12.4m6.7-6.8l-2.7 2.7"
                fill="none"
                stroke="#FC9F0F"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M89.5 16.7l7.6-7.6c3.5-3.5 9.3-3.5 12.8 0l37.4 37.4c3.5 3.5 3.5 9.3 0 12.8l-37.4 37.4c-3.5 3.5-9.3 3.5-12.8 0L59.7 59.4c-3.5-3.5-3.5-9.3 0-12.8L73.3 33m13.2-13.2l-9.8 9.8"
                fill="none"
                stroke="#FC9F0F"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M100.5 40.4c0-2 1.6-3.6 3.6-3.6s3.6 1.6 3.6 3.6v13.9c0 2-1.6 3.6-3.6 3.6s-3.6-1.6-3.6-3.6V40.4zm0 25.4c0-2 1.6-3.6 3.6-3.6s3.6 1.6 3.6 3.6-1.6 3.6-3.6 3.6-3.6-1.6-3.6-3.6z"
                fill="#F7FAFB"
                stroke="#212225"
                stroke-width="2"
              />
              <path
                d="M30.1 17h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7V8h-7V1h-2v7h-7v2h7v7z"
                fill="#DBDEE5"
              />
              <path
                d="M30.1 17h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm103.8 0h-2v-7h-7V8h7V1h2v7h7v2h-7v7zm-43 88h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm66 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22.5 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-66h-2v-7h-7V8h7V1h2v7h7v2h-7v7zm0 22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-21.5-22h-2v-7h-7V8h7V1h2v7h7v2h-7v7z"
                fill="#DBDEE5"
              />
            </svg>
            <div
              class="flex flex-col overflow-hidden rounded-xl"
            >
              <div
                class="css-rzhg83"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="circle-exclamation-mark"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
                <span>
                  Warning
                </span>
              </div>
              <div
                class="css-trjt6n"
              >
                You have selected a low fee. Your transaction may never be confirmed. Do you wish to continue anyway?
              </div>
            </div>
            <div
              class="mt-4"
            >
              <fieldset
                class="flex min-w-0 flex-col css-ea0il3"
              >
                <label
                  class="flex w-max cursor-pointer items-center space-x-3"
                >
                  <input
                    class="css-kf7z38"
                    color="success"
                    data-testid="FeeWarning__suppressWarning-toggle"
                    name="suppressWarning"
                    type="checkbox"
                  />
                  <span
                    class="text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Don’t warn me about fees again
                  </span>
                </label>
              </fieldset>
            </div>
            <div
              class="css-j6ajdm"
            >
              <button
                class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500"
                data-testid="FeeWarning__cancel-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Cancel
                </div>
              </button>
              <button
                class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 green:hover:bg-theme-primary-700 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500"
                data-testid="FeeWarning__continue-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Continue
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
